gl31-master/src/test/deca/context/invalid/sansobjet/affect_void_string.deca
// Description:
//    Affectation et typage : associe un void a une string
//
// Resultats:
//    Ligne 15: Affectation de types incompatibles.
//
// Historique:
//    cree le 08/01/2021

{
   string a;
   void b;

   // Doit etre refuse.
   a = b;
}
